; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_jump.c_any_condjump_p.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_jump.c_any_condjump_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IF_THEN_ELSE = common dso_local global i64 0, align 8
@PC = common dso_local global i32 0, align 4
@LABEL_REF = common dso_local global i32 0, align 4
@RETURN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @any_condjump_p(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @pc_set(i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %60

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @SET_SRC(i32 %13)
  %15 = call i64 @GET_CODE(i32 %14)
  %16 = load i64, i64* @IF_THEN_ELSE, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %12
  store i32 0, i32* %2, align 4
  br label %60

19:                                               ; preds = %12
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @SET_SRC(i32 %20)
  %22 = call i32 @XEXP(i32 %21, i32 1)
  %23 = call i64 @GET_CODE(i32 %22)
  %24 = trunc i64 %23 to i32
  store i32 %24, i32* %5, align 4
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @SET_SRC(i32 %25)
  %27 = call i32 @XEXP(i32 %26, i32 2)
  %28 = call i64 @GET_CODE(i32 %27)
  %29 = trunc i64 %28 to i32
  store i32 %29, i32* %6, align 4
  %30 = load i32, i32* %6, align 4
  %31 = load i32, i32* @PC, align 4
  %32 = icmp eq i32 %30, %31
  br i1 %32, label %33, label %41

33:                                               ; preds = %19
  %34 = load i32, i32* %5, align 4
  %35 = load i32, i32* @LABEL_REF, align 4
  %36 = icmp eq i32 %34, %35
  br i1 %36, label %57, label %37

37:                                               ; preds = %33
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* @RETURN, align 4
  %40 = icmp eq i32 %38, %39
  br i1 %40, label %57, label %41

41:                                               ; preds = %37, %19
  %42 = load i32, i32* %5, align 4
  %43 = load i32, i32* @PC, align 4
  %44 = icmp eq i32 %42, %43
  br i1 %44, label %45, label %55

45:                                               ; preds = %41
  %46 = load i32, i32* %6, align 4
  %47 = load i32, i32* @LABEL_REF, align 4
  %48 = icmp eq i32 %46, %47
  br i1 %48, label %53, label %49

49:                                               ; preds = %45
  %50 = load i32, i32* %6, align 4
  %51 = load i32, i32* @RETURN, align 4
  %52 = icmp eq i32 %50, %51
  br label %53

53:                                               ; preds = %49, %45
  %54 = phi i1 [ true, %45 ], [ %52, %49 ]
  br label %55

55:                                               ; preds = %53, %41
  %56 = phi i1 [ false, %41 ], [ %54, %53 ]
  br label %57

57:                                               ; preds = %55, %37, %33
  %58 = phi i1 [ true, %37 ], [ true, %33 ], [ %56, %55 ]
  %59 = zext i1 %58 to i32
  store i32 %59, i32* %2, align 4
  br label %60

60:                                               ; preds = %57, %18, %11
  %61 = load i32, i32* %2, align 4
  ret i32 %61
}

declare dso_local i32 @pc_set(i32) #1

declare dso_local i64 @GET_CODE(i32) #1

declare dso_local i32 @SET_SRC(i32) #1

declare dso_local i32 @XEXP(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
